freegeek-extras (1.2.21) UNRELEASED; urgency=low

  * freegeek-extras-pdx: preinst/postrm: assign the appropriate package name to
    the aboutHome.js dpkg diversion.

 -- Vagrant Cascadian <vagrant@debian.org>  Tue, 15 Feb 2011 20:31:17 -0800

freegeek-extras (1.2.20) freegeek-test; urgency=low

  * remove aboutHome.js from freegeek-extras, to complete the transition to
    freegeek-extras-pdx (Closes: #21844).

 -- Vagrant Cascadian <vagrant@debian.org>  Tue, 15 Feb 2011 19:41:01 -0800

freegeek-extras (1.2.19) freegeek-test; urgency=low

  * debian/copyright: refer to GPL-2 explicitly.
  * debian/control: fix ambiguous versioned conflicts in freegeek-extras-pdx.
  * debian/rules: remove generated apt sources.list.d files.
  * basiccheck: add check for bad intel video cards.
  * move homepage mangling into freegeek-extras-pdx.
  * remove homepage diversion in postrm.
  * add lintian overrides for trivial issues that aren't relevent.
  * debian/source/format to 3.0 (native).
  * update standards-version to 3.9.1: 
    - switch from Conflicts to Breaks where appropriate.
  * update content for default firefox homepage (Closes: #20587).

 -- Vagrant Cascadian <vagrant@debian.org>  Tue, 15 Feb 2011 14:23:20 -0800

freegeek-extras (1.2.18) freegeek-test; urgency=low

  [ Ryan Niebur ]
  * change the recommended resolution from 1024x768 to 1024x768 or
    larger as requested by Meredith (see #20739)
  * report maximum cpu speed in basicheck (Closes: #20739)
  * change the homepage (Closes: #20587)

  [ Vagrant Cascadian ]
  * basiccheck: removed questions about hard drives, serial and parallel ports.
    (Closes: #21122)
  * add content to homepage (Closes: #20587). 

 -- Vagrant Cascadian <vagrant@debian.org>  Tue, 01 Feb 2011 14:10:01 -0800

freegeek-extras (1.2.17) freegeek-test; urgency=low

  [ Ryan Niebur ]
  * fix basiccheck hard drive test (Closes: #19733)

  [ Vagrant Cascadian ]
  * configure sources.list based on the running distribution.