@@ -1,9 +1,13 @@
 freegeek-extras (1.2.21) UNRELEASED; urgency=low
 
+  [ Vagrant Cascadian ]
   * freegeek-extras-pdx: preinst/postrm: assign the appropriate package name to
     the aboutHome.js dpkg diversion.
 
- -- Vagrant Cascadian <vagrant@debian.org>  Tue, 15 Feb 2011 20:31:17 -0800
+  [ Ryan Niebur ]
+  * make basiccheck translateable (Closes: #21123)
+
+ -- Ryan Niebur <ryan@debian.org>  Thu, 24 Feb 2011 12:46:03 -0800
 
 freegeek-extras (1.2.20) freegeek-test; urgency=low
 
